<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Medical Locator</string>
    <string name="app_version">Version: %1$s</string>
    <string name="activitymain_initializing_provider">Initializing Data Provider. Please wait a moment..</string>
    <string name="activitymain_search">Search</string>
    <string name="activitymain_enabletracking">Enable position tracking</string>
    <string name="activitymain_disabletracking">Disable position tracking</string>
    <string name="activitymain_about">About</string>
    <string name="activitymain_search_hint">Search on map</string>
    <string name="activitymain_selectall">Select all</string>
    <string name="activitymain_deselectall">Select none</string>
    <string name="activitysearch_loading">Loading the results..</string>
    <string name="activitysearch_returnedrows">Results found for \'%1$s\': %2$d</string>
    <string name="activitysearch_noresults">No results found for \'%1$s\'</string>
    <string name="dialogfacilitybubble_title">Facility</string>
    <string name="dialogfacilitybubble_call">Call there</string>
    <string name="dialogfacilitybubble_email">E-mail it</string>
    <string name="dialogfacilitybubble_email_app_chooser">Choose the e-mail application</string>
    <string name="dialogfacilitybubble_www">Go to webpage</string>
    <string name="dialogfacilitybubble_route">Find the route</string>
    <string name="dialogfacilitybubble_nointernetroute">Error during downloading route. Is the internet connection available?</string>
    <string name="dialogabout_about">MedicalLocator is a map-based application presenting the medical facilities in Poland (at least currently). The idea was to collect the public-available data about the medical facilities, present it in the user-friendly form to the Android users and allow them use this data.\n\nEnjoy!</string>
    <string name="search_hint">What are you looking for?</string>
    
    <string name="activitymain_loading">Loading..</string>
    <string name="activitymain_type_filter_all_enabled">Any type..</string>

    <string name="facilitytype_centre">Centre</string>
    <string name="facilitytype_dentist">Dentist</string>
    <string name="facilitytype_eye_doctor">Eye doctor</string>
    <string name="facilitytype_gynecologist">Gynecologist</string>
    <string name="facilitytype_doctor">Doctor</string>
    <string name="facilitytype_hospital">Hospital</string>
    <string name="facilitytype_ambulatory">Ambulatory</string>
    <string name="facilitytype_other">Other</string>
</resources>
