<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <com.google.android.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true"
        android:enabled="true" 
        android:apiKey="pUt_YoUR_map_aPI_KeY_HeRE" />

    <LinearLayout 
        android:gravity="center_vertical|center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loadingViewGroup"
        android:background="@android:color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:padding="3dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/primary_text_dark"
            android:text="@string/activitymain_loading"/>
        
    </LinearLayout>
    
    
    <SlidingDrawer 
        android:id="@+id/drawer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:content="@+id/content"
		android:handle="@+id/handle">
 
	    <RelativeLayout
	        android:id="@+id/content"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:background="@drawable/drawer_background_shape"
	        android:padding="10dp">

	    	<LinearLayout
	    	    android:layout_width="fill_parent"
	    	    android:layout_height="wrap_content"
		        android:layout_alignParentTop="true"
	            android:layout_above="@+id/drawerConfigurationPart"	            
	    	    android:orientation="vertical">
	    	    
		    	<LinearLayout
				    android:id="@+id/searchViewGroup"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal">
		
		            <EditText
		                android:id="@+id/queryEditText"
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_weight="1"
		                android:hint="@string/activitymain_search_hint"
		                android:inputType="text" >
		
		                <requestFocus />
		            </EditText>
		
		            <ImageButton
		                android:id="@+id/clearQueryButton"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:src="@drawable/ic_menu_close_clear_cancel" />
		        </LinearLayout>

			    <ImageButton
                    android:id="@+id/typesSelectAllOrNone" 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:onClick="onSelectAllOrNoneTypes"/>
		    		    
		    	<ScrollView 
		            android:fillViewport="false"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_margin="5dp"
		            android:id="@+id/drawer_scrollview">
		
		           <LinearLayout
		                android:id="@+id/drawer_filters_viewgroup"
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:orientation="vertical"
		                android:background="@drawable/drawer_types_background">
		                
	            	</LinearLayout>
		            
		        </ScrollView>
		    		    	    	    
	    	</LinearLayout>	    
	        		        
	        <LinearLayout
	            android:id="@+id/drawerConfigurationPart"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_alignParentBottom="true"
	            android:orientation="vertical">
		        
		        <CheckBox
                    android:id="@+id/trackingCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activitymain_enabletracking"
                    style="@style/CheckBoxStyle"/>
		        		        		        		        		        		        
  	            <LinearLayout
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center_vertical">
		        
					<Button
					    android:text="@string/activitymain_search"
					    android:layout_width="0dp"
					    android:layout_height="wrap_content"
					    android:layout_weight="1"
					    android:onClick="onSearchClicked"/>

					<View
					    android:background="@android:color/white"
					    android:layout_width="1px"
					    android:layout_height="fill_parent"
					    android:padding="5dp"/>
					
					<Button
					    android:text="@string/activitymain_about"
					    android:layout_width="0dp"
					    android:layout_height="wrap_content"
					    android:layout_weight="1"
					    android:onClick="onShowAboutClicked"/>
														
		        </LinearLayout>
					            	            
            </LinearLayout>
	        
	    </RelativeLayout> 
  
        <ImageView 
            android:id="@id/handle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/handle_shine"
            android:gravity="center_vertical|center_horizontal"/>        
        
    </SlidingDrawer>    
         
</FrameLayout>